# garagem

./: db.sqlite3  pyproject.toml
__pypackages__/3.10/lib/Django-4.2.dist-info/: RECORD
__pypackages__/3.10/lib/sqlparse-0.4.4.dist-info/: RECORD
config/: settings.py  urls.py
garagem/: __init__.py  admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_marca.py  0002_veiculo_capa.py  0003_acessorio_cor.py  0003_modelo.py  0004_remove_veiculo_categoria_remove_veiculo_marca_and_more.py  0004_veiculo.py  0005_veiculo_descricao_remove_veiculo_capa_veiculo_capa.py  0005_veiculo_modelo.py
garagem/models/: acessorio.py  veiculo.py
garagem/serializers/: __init__.py  veiculo.py
garagem/views/: acessorio.py  categoria.py  cor.py  marca.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
